@startuml modelo_fisico_papacol
' =====================================================================
' PAPACOL - MODELO FISICO DE BASE DE DATOS (3FN) - PostgreSQL 16
' Corresponde exactamente a database/schema.sql
' =====================================================================
skinparam backgroundColor White
skinparam shadowing false
skinparam class {
  BackgroundColor #EAF4E3
  BorderColor #4A7C3F
  ArrowColor #4A7C3F
}
hide circle
skinparam linetype ortho

entity "rol" as rol {
  * rol_id : INTEGER <<PK>>
  --
  * nombre : VARCHAR(20) <<UQ>>
  * descripcion : VARCHAR(150)
}

entity "municipio" as mun {
  * municipio_id : INTEGER <<PK>>
  --
  * nombre : VARCHAR(80)
  * departamento : VARCHAR(80)
    codigo_dane : CHAR(5) <<UQ, NULL>>
}

entity "variedad_papa" as var {
  * variedad_id : INTEGER <<PK>>
  --
  * nombre : VARCHAR(60) <<UQ>>
    descripcion : VARCHAR(200)
}

entity "calibre" as cal {
  * calibre_id : INTEGER <<PK>>
  --
  * nombre : VARCHAR(30) <<UQ>>
    rango_tamano : VARCHAR(60)
}

entity "usuario" as usr {
  * usuario_id : INTEGER <<PK>>
  --
  * identificacion : VARCHAR(20) <<UQ>>
  * nombre : VARCHAR(60)
  * apellido : VARCHAR(60)
  * correo : VARCHAR(120) <<UQ>>  (RN-01)
  * telefono : VARCHAR(20)
  * contrasena_hash : VARCHAR(100)  (RN-08)
  * rol_id : INTEGER <<FK>>
  * municipio_id : INTEGER <<FK>>
  * estado : VARCHAR(10)
  * fecha_registro : TIMESTAMP
  * fecha_actualizacion : TIMESTAMP
}

entity "lote" as lot {
  * lote_id : INTEGER <<PK>>
  --
  * usuario_id : INTEGER <<FK>>
  * variedad_id : INTEGER <<FK>>
  * calibre_id : INTEGER <<FK>>
  * cantidad_bultos : INTEGER  (RN-04)
  * peso_bulto_kg : NUMERIC(6,2)
  * precio_bulto : NUMERIC(12,2)  (RN-04)
  * fecha_cosecha : DATE  (RN-05)
  * fecha_publicacion : DATE
  * estado : VARCHAR(12)  (RN-06, RN-09)
    descripcion : VARCHAR(300)
  * fecha_actualizacion : TIMESTAMP
}

rol  ||--o{ usr : "define el rol de"
mun  ||--o{ usr : "ubica a"
usr  ||--o{ lot : "publica"
var  ||--o{ lot : "clasifica por variedad"
cal  ||--o{ lot : "clasifica por calibre"

note bottom of lot
  Indice del nucleo del sistema (CFV-03):
  idx_lote_catalogo (estado, variedad_id, calibre_id)
  Indices de apoyo: idx_lote_productor, idx_lote_precio
end note

@enduml
